fix(header) make page header text smaller on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/components/_page-header.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/components/_page-header.scss
@@ -73,4 +73,8 @@
   .page-header-secondary .circle .label {
     font-size: 0.7em;
   }
+
+  .page-header-secondary h1 {
+    font-size: 3em;
+  }
 }
